platform-services/feature-flags/manifests/namespace.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/namespace_v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: feature-flags
  labels:
    internal-gateway-access: "true"
