platform-services/feature-flags/manifests/daemonset.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/apps/daemonset_v1.json
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: feature-flags
  namespace: feature-flags
spec:
  selector:
    matchLabels:
      app: feature-flags
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: feature-flags
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: feature-flags
          image: ghcr.io/accurate0/feature-flags
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: grpc
              containerPort: 50051
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          livenessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 60
          readinessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 15
