platform-services/feature-flags/manifests/frontend-deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flags-frontend
  namespace: feature-flags
spec:
  selector:
    matchLabels:
      app: feature-flags-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: feature-flags-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: feature-flags-frontend
          image: ghcr.io/accurate0/feature-flags-frontend
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /debug
              port: http
            initialDelaySeconds: 5
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /debug
              port: http
            initialDelaySeconds: 5
            periodSeconds: 60
