platform-services/feature-flags/manifests/frontend-service.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: feature-flags
  labels:
    app: feature-flags-frontend
spec:
  selector:
    app: feature-flags-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
