platform-services/feature-flags/manifests/securitypolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: feature-flags-oidc
  namespace: feature-flags
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: feature-flags-frontend
  oidc:
    provider:
      issuer: https://idm.anurag.sh/oauth2/openid/feature-flags
    clientIDRef:
      name: kanidm-feature-flags-oidc
    clientSecret:
      name: kanidm-feature-flags-oidc
    redirectURL: https://feature-flags.inf-k8s.net/oauth2/callback
    scopes:
      - openid
      - email
      - profile
    forwardAccessToken: true
  jwt:
    providers:
      - name: kanidm
        issuer: https://idm.anurag.sh/oauth2/openid/feature-flags
        remoteJWKS:
          cacheDuration: 3600s
          uri: https://idm.anurag.sh/oauth2/openid/feature-flags/public_key.jwk
