platform-services/feature-flags/manifests/networkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: feature-flags
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grpc-to-feature-flags
  namespace: feature-flags
spec:
  podSelector:
    matchLabels:
      app: feature-flags
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: feature-flags-frontend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ai-gateway
          podSelector:
            matchLabels:
              app: ai-gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-gateway
          podSelector:
            matchLabels:
              app: home-gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: maccas-api
          podSelector:
            matchLabels:
              app: maccas-api
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: maccas-api
          podSelector:
            matchLabels:
              app: maccas-recommendations
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: janitor-bot
          podSelector:
            matchLabels:
              app: janitor-bot
      ports:
        - protocol: TCP
          port: 50051
---
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-frontend
  namespace: feature-flags
spec:
  podSelector:
    matchLabels:
      app: feature-flags-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - protocol: TCP
          port: 3000
